syntax = "proto3";



option java_multiple_files = true;

option go_package = "/target";

package src.main.proto;;

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

service UserService {
  rpc createUser (User) returns (User){}
  rpc updateUser (User) returns (User){}
  rpc getUser (User) returns (User){}
  rpc deleteUser (User) returns (User){}
}




//message ColumnInfo {
//  string name = 1;
//  string type = 2;
//}
